--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "styled-icons": "^10.34.0",
+    "sweetalert2": "^11.0.18",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
